# pyFilteredAspell

./: .aspell.pws  LICENSE  Readme.md  install  pyFilteredAspell  pyproject.toml
extraCommieParsers/: __init__.py  python_parser.py
pyFilteredAspell/: __init__.py
pyFilteredAspellFilters/: __init__.py  commieFilter.py  config.yaml  config.yaml.example
scripts/: installConfigurationDirectories  installEditablePyFilteredAspellCommand
